--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -94,8 +94,21 @@ jobs:
       - name: Type-check
         run: bunx tsc --noEmit
 
+      - name: Verify npm supports trusted publishing
+        run: |
+          NPM_VERSION=$(npm --version)
+          echo "npm version: $NPM_VERSION"
+          MAJOR=$(echo "$NPM_VERSION" | cut -d. -f1)
+          if [ "$MAJOR" -lt 11 ]; then
+            echo "::error::npm >= 11.5.1 required for trusted publishing (found $NPM_VERSION)"
+            exit 1
+          fi
+
+      - name: Clear .npmrc auth token (let npm use OIDC)
+        run: npm config delete //registry.npmjs.org/:_authToken || true
+
       - name: Publish to npm
-        run: npm publish
+        run: npm publish --access public
 
       - name: Push version bump to PR branch
         run: |
